--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
           >
           <a href="/" onclick="closeNav()">Início</a>
           <a href="#sobre" onclick="closeNav()">Noivas</a>
-          <a href="#galeria" onclick="closeNav()">Linha prêt-a-porter</a>
-          <a href="#clientes" onclick="closeNav()">Nossas noivas</a>
+          <a href="#linha-porter" onclick="closeNav()">Linha prêt-a-porter</a>
+          <a href="#nossas-noivas" onclick="closeNav()">Nossas noivas</a>
 
           <a href="#contato" onclick="closeNav()">Contato</a>
         </div>
@@ -169,7 +169,7 @@
       />
     </div> -->
 
-    <div id="galeria"></div>
+    <div id="linha-porter"></div>
 
     <section class="s-galeria" style="margin-top: 7rem;">
       <div class="container">
@@ -204,10 +204,6 @@
             <img src="./resources/assets/img/noiva-atelie.jpeg" alt="" />
           </div>
           <div class="text-banner-home">
-            <!-- <img
-              src="./resources/assets/img/alianca-removebg-preview.png"
-              alt=""
-            /> -->
             <h1>" TODA NOIVA É ESPECIAL "</h1>
             <div class="link-banner-home">
               <a href="">Agende sua visita</a>
@@ -254,125 +250,7 @@
       </div>
     </section>
 
-    <!-- <div class="divisoria-sections2">
-      <img
-        src="./resources/assets/img/divisoria-coracao-removebg-preview.png"
-        alt=""
-      />
-    </div> -->
-
-    <!-- <section class="s-servicos">
-      <div class="container">
-        <div class="content-servicos">
-          <strong>Serviços</strong>
-          <h2>Nossos serviços</h2>
-          <div class="box-servicos">
-            <div class="left-servicos">
-              <div class="itens-servico">
-                <img src="./resources/assets/img/servico-1.png" alt="" />
-                <p>Tipo de serviço 1</p>
-              </div>
-              <div class="itens-servico">
-                <img src="./resources/assets/img/servico-2.png" alt="" />
-                <p>Tipo de serviço 2</p>
-              </div>
-              <div class="itens-servico">
-                <img src="./resources/assets/img/servico-3.png" alt="" />
-                <p>Tipo de serviço 3</p>
-              </div>
-              <div class="itens-servico">
-                <img src="./resources/assets/img/servico-4.png" alt="" />
-                <p>Tipo de serviço 4</p>
-              </div>
-            </div>
-            <div class="right-servicos">
-              <img
-                src="./resources/assets/img/dois-coracoes-removebg-preview.png"
-                alt=""
-              />
-              <h2>Os melhores vestidos estão aqui</h2>
-              <p>
-                Informação sobre os serviços prestados Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Ea! Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Est quos enim reiciendis vero
-                tenetur repellat eos. Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Ipsam ab exercitationem repudiandae, odio
-                minima enim ad amet rem officiis reiciendis?
-              </p>
-            </div>
-          </div>
-          <div class="link-servicos">
-            <a href="">Ver mais</a>
-          </div>
-        </div>
-      </div>
-    </section> -->
-    <!-- 
-    <div class="divisoria-sections2">
-      <img
-        src="./resources/assets/img/divisoria-wedding-removebg-preview.png"
-        alt=""
-      />
-    </div> -->
-
-    <!-- <section class="s-depoimentos">
-      <div class="container">
-        <div class="content-depoimentos">
-          <strong>Depoimentos</strong>
-          <h2>Confira os depoimentos dos clientes</h2>
-          <div class="box-depoimentos">
-            <div class="item-depoimento">
-              <img src="./resources/assets/img/perfil-exemplo2.avif" alt="" />
-              <p class="name-depoimento">Talita</p>
-              <p class="text-depoimento">
-                <span>"</span> Lorem ipsum dolor sit, amet consectetur
-                adipisicing elit. Dicta blanditiis incidunt consectetur quaerat
-                doloremque est, adipisci, nisi repellat harum eos optio
-                consequuntur veritatis provident quasi nostrum voluptatum
-                voluptatem odio nam?
-              </p>
-              <p class="date-depoimento">20/20/2020</p>
-            </div>
-
-            <div class="item-depoimento">
-              <img src="./resources/assets/img/perfil-exemplo2.avif" alt="" />
-              <p class="name-depoimento">Nathalia</p>
-              <p class="text-depoimento">
-                <span>"</span> Lorem ipsum dolor sit, amet consectetur
-                adipisicing elit. Dicta blanditiis incidunt consectetur quaerat
-                doloremque est, adipisci, nisi repellat harum eos optio
-                consequuntur veritatis provident quasi nostrum voluptatum
-                voluptatem odio nam?
-              </p>
-              <p class="date-depoimento">20/20/2020</p>
-            </div>
-
-            <div class="item-depoimento">
-              <img src="./resources/assets/img/perfil-exemplo2.avif" alt="" />
-              <p class="name-depoimento">Luiza</p>
-              <p class="text-depoimento">
-                <span>"</span> Lorem ipsum dolor sit, amet consectetur
-                adipisicing elit. Dicta blanditiis incidunt consectetur quaerat
-                doloremque est, adipisci, nisi repellat harum eos optio
-                consequuntur veritatis provident quasi nostrum voluptatum
-                voluptatem odio nam?
-              </p>
-              <p class="date-depoimento">20/20/2020</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
-    
-
-    <!-- <div class="divisoria-sections2">
-      <img
-        src="./resources/assets/img/divisoria-coracao-removebg-preview.png"
-        alt=""
-      />
-    </div> -->
-
-    <div id="contato"></div>
+    <div id="nossas-noivas"></div>
 
     <section class="s-contato">
       <div class="container">
