--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
       <div class="container">
         <div class="content-sobre">
           <div class="box-sobre"> 
-            <div class="box-left-sobre">
-              <div id="sobre"></div>
+            <div class="box-left-sobre"> <div id="noivas-mobile"></div>
               <strong>Noivas</strong>
               <h2>Noivas</h2>
               <p style="text-align: justify;">
@@ -156,7 +155,7 @@
                 <source src="movie.mp4" type="video/mp4" />
                 <source src="movie.ogg" type="video/ogg" />
               </video>
-            </div>
+            </div> <div id="pre-porter-mobile"></div>
           </div>
         </div>
       </div>
