inclusao de imagens

--- a/index.html
+++ b/index.html
@@ -169,17 +169,49 @@
           <strong>Galeria prêt-a-porter</strong>
           <h2>Conheça nossa linha prêt-a-porter</h2>
           <div class="box-galeria">
-            <img src="./resources/assets/img/vestido-img1.jpg" alt="" />
-            <img src="./resources/assets/img/vestido-img2.jpg" alt="" />
-            <img src="./resources/assets/img/vestido-img3.jpg" alt="" />
-            <img src="./resources/assets/img/vestido-img5.jpg" alt="" />
+            <img src="./resources/assets/img/julia-golldenzon.webp" alt="" />
+            <img src="./resources/assets/img/julia-golldenzon1.webp" alt="" />
+            <img src="./resources/assets/img/julia-golldenzon3.webp" alt="" />
+            <img src="./resources/assets/img/julia-golldenzon7.webp" alt="" />
             <div id="more-images1" class="hidden">
-              <img src="./resources/assets/img/vestido-img2.jpg" alt="" />
-              <img src="./resources/assets/img/vestido-img4.jpg" alt="" />
-              <img src="./resources/assets/img/vestido-img5.jpg" alt="" />
-              <img src="./resources/assets/img/vestido-img2.jpg" alt="" />
-              <img src="./resources/assets/img/vestido-img5.jpg" alt="" />
-              <img src="./resources/assets/img/vestido-img2.jpg" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon2.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon4.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon5.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon6.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon8.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon9.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon10.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon11.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon12.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon13.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon14.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon15.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon16.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon17.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon18.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon19.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon20.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon21.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon22.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon23.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon24.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon25.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon26.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon27.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon28.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon29.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon30.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon31.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon32.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon33.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon34.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon35.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon36.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon37.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon38.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon39.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon40.webp" alt="" />
+              <img src="./resources/assets/img/julia-golldenzon41.webp" alt="" />
             </div>
           </div>
           <div class="link-galeria">
